# itmo-web-programming

./: .clang-format  .editorconfig  .gitignore  LICENSE  README.md
lab-1/task-1/: Sample01.html
lab-1/task-2/: Sample02.html
lab-1/task-3/: Sample03.html
lab-1/tex/: main.tex
lab-2/task-3/src/: main.cpp  url_validator.hpp  website_display_info.hpp  website_form.cpp  website_list_window.cpp  website_viewer.cpp
lab-4/code/: login-success.html  login.html  order.php
lab-4/code/css/: style.css
lab-4/tex/: Makefile  main.tex
labs/lab-1/tex/: main.tex
labs/lab-2/: package-lock.json
labs/lab-2/task-3/: CMakeLists.txt
labs/lab-2/task-3/src/: main.cpp  url_validator.cpp  website_form.cpp  website_list_model.cpp  website_list_model.hpp
labs/lab-2/tex/: main.tex
labs/lab-3/task-1/: package-lock.json
labs/lab-3/task-2/: feedback-success.html  index.html
labs/lab-3/tex/puml/: database.puml
labs/lab-4/task-1/: index.html
labs/lab-4/tex/: main.tex
labs/lab-4/tex/puml/: database.puml
labs/lab-5/task-1/: cats.html  index.html  login.php
labs/lab-5/task-1/css/: style.css
labs/lab-5/tex/: main.tex
labs/lab-6/task-1/: client.py  server.py
labs/lab-6/task-2/: server.py
labs/lab-6/task-4/: client.py
labs/lab-6/tex/: main.tex
labs/lab-7/tex/: main.tex
labs/lab-8/task-1/store/: db.sqlite3
labs/lab-8/tex/: main.tex
terms/term-5/lab-1/tex/: main.tex
terms/term-5/lab-2/: gulpfile.js  package.json
terms/term-6/lab-1/: README.md
terms/term-6/lab-2/: README.md
terms/term-6/report/: beamerthemeauriga.sty  main.tex
(+114 files in other folders)
